Fix logo overflow and z-index bug

--- a/styles/index.css
+++ b/styles/index.css
@@ -352,7 +352,7 @@ body {
 }
 
 .what-people-say-content {
-    z-index: 10;
+    z-index: 9;
     width: 90%;
     display: flex;
     flex-direction: column;
